--- a/homogeniuses/static/css/style.scss
+++ b/homogeniuses/static/css/style.scss
@@ -1,10 +1,35 @@
+* {
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 18px;
+}
+
 body {
     background-color: salmon;
     line-height: 22px;
     font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+header {
+    margin: 12px 12px 24px 12px;
+    h1 {
+        font-family:'Courier New', Courier, monospace;
+        font-size: clamp(20px, 5vw, 38px);
+        line-height: 32px;
+        font-weight: 900;
+        text-shadow: 3px 3px 0 rgba(40, 40, 40, .2);
+        text-align: center;
+    }
 }
 
 nav.user-panel {
+    display: none;
+    visibility: hidden;
     border: 1px solid black;
     position: absolute;
     right: 0;
@@ -13,5 +38,42 @@ nav.user-panel {
     flex-direction: column;
     padding: 5px;
     margin: 5px;
-    
+}
+
+main {
+    width: 100%;
+    max-width: 800px;
+    &.girthy {
+        max-width: 100%;
+    }
+    div.video iframe {
+        border: 10px solid black;
+        width: 100%;
+        aspect-ratio: 16 / 9;
+        max-height: 80vh;
+    }
+    div.votes {
+        display: flex;
+        border: 1px solid black;
+        justify-content: space-around;
+        align-items: center;
+        padding: 10px;
+        margin: 10px 0 10px 0;
+        .or {
+            font-size: 3rem;
+            font-weight: 900;
+        }
+
+        button {
+            width: 25%;
+            min-height: 80px;
+            max-height: 100px;
+            border-radius: 6px;
+            font-size: 2rem;
+        }
+    }
+
+    .score {
+        font-size: 20px;
+    }
 }
