Adding videos blueprint / initial view

--- a/homogeniuses/templates/home.html
+++ b/homogeniuses/templates/home.html
@@ -30,18 +30,7 @@
         <h1>Homo-Geniuses: an appreciation of gay inventors</h1>
     </header>
     <main class="">
-        <div class="video" aria-label="Homo-genius video">
-            <iframe src="https://www.youtube.com/embed/AonAoNCq7RQ?si=a_T_HSTJcMHgPl6T&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-        <div class="votes" aria-label="Vote options">
-            <button type="button">homo</button>
-            <span class="or">or</span>
-            <button type="button">genius</button>
-        </div>
-        <div class="score" aria-label="Video score">
-            <p>Votes for homo: 0</p>
-            <p>Votes for genius: 0</p>
-        </div>
+        {% block video %}{% endblock %}
     </main>
 </body>
 </html>
