--- a/homogeniuses/templates/base.html
+++ b/homogeniuses/templates/base.html
@@ -10,26 +10,21 @@
     {% block head %}{% endblock head %} 
 </head>
 <body>
-    <nav aria-labelledby="user-panel" class="user-panel">
-        <h2 id="user-panel">User panel</h2>
-        {% if user %}
-        <div>
-            <img src="{{ user.avatar }}" alt="Steam avatar for {{user.handle}}" width="32" height="32"/>
-            <a href="{{ url_for('user.user_profile', steam_id=user.steam_id) }}">{{ user.handle }}</a>
-        </div>
-        {% endif %}
-        <ul>
-            {% if not user %}
-            <li><a href="{{ url_for('auth.login') }}">Jack In (via Steam)</a></li>
-            {% else %}
-            <li><a href="{{ url_for('user.edit_user_profile', steam_id = user.steam_id) }}">Edit Profile</a></li>
-            <li><a href="{{ url_for('auth.logout') }}">Jack Out</a></li>
-            {% endif %}
-        </ul>
-    </nav>
     <header>
         <h1>Homo-Geniuses: an appreciation of gay inventors</h1>
-        <a class="what">what is this place?</a>
+        <nav aria-label="site-navigation">
+            <ul>
+                <li><a href="{{ url_for('faq') }}">what is this place?</a></li>
+                <li><a href="{{ url_for('videos.no_video_id') }}">cast judgement</a></li>
+                <li><a href="{{ url_for('videos.submit_clips') }}">submit clips</a></li>
+                {% if user %}
+                <li><a href="{{ url_for('auth.logout') }}">jack out</a></li>
+                <li><a href="{{ url_for('user.edit_user_profile', steam_id = user.steam_id) }}"><img src="{{ user.avatar }}" alt="Steam avatar for {{user.handle}}" width="24" height="24"/></a> <a href="{{ url_for('user.edit_user_profile', steam_id = user.steam_id) }}">profile</a></li>
+                {% else %}
+                <li><a href="{{ url_for('auth.login') }}">sign in (via steam)</a></li>
+                {% endif %}
+            </ul>
+        </nav>
     </header>
     <main class="">
         {% block main %}{% endblock main %}
