--- a/homogeniuses/templates/faq.html
+++ b/homogeniuses/templates/faq.html
@@ -11,4 +11,8 @@
 
 <h3>homo-genius?</h3>
 <p class="faq"><em>Homo-genius: a history of gay inventors</em> (link: <a href="https://www.youtube.com/playlist?list=PL03A1BFDC75064F12">YouTube</a>) is a series of clips from fighting games put together by <a href="https://www.youtube.com/@DandyDLC" title="DandyJ's YouTube channel">DandyJ</a>. Each of these clips represents a near perfect cross-section of decisions that are both genius and homo.</p>
+
+<h4>.... "homo"? wtf dude?</h4>
+<p class="faq">Yeah, I don't think I have any real clever way for this not to sound slightly offensive. All that I can offer is my gay card. I'm a queer dude married to a queer dude, and all my friends are also gay or queer or aggreesively gay queers.</p>
+<p class="faq">I'm granting you, the user of this website, with a temporary "gay pass". Today I will be the gay friend you have. I will not allow you to use the f-slur however. You need to go out and suck some actual dicks to get that power, sorry bub.</p>
 {% endblock %}
