--- a/homogeniuses/static/css/style.scss
+++ b/homogeniuses/static/css/style.scss
@@ -99,12 +99,16 @@ main {
         }
     }
 
-    h2, h3 {
+    h2, h3, h4 {
         font-weight: 800;
         margin-bottom: 8px;
         margin-top: 12px;
         font-style: italic;
         border-bottom: 1px solid black;
+    }
+
+    h4 {
+        font-size: 16px;
     }
 
     .golden {
