Linking header to main page

--- a/homogeniuses/templates/base.html
+++ b/homogeniuses/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Homo-Geniuses: an appreciation of gay inventors</h1>
+        <h1><a href="{{ url_for('index') }}">Homo-Geniuses: an appreciation of gay inventors</a></h1>
     </header>
     <nav aria-label="Site navigation">
         <ul class="site-nav">
