--- a/homogeniuses/static/css/style.scss
+++ b/homogeniuses/static/css/style.scss
@@ -29,6 +29,10 @@ header {
         font-weight: 900;
         text-shadow: 3px 3px 0 rgba(40, 40, 40, .2);
         text-align: center;
+        
+        a {
+            text-decoration: none;
+        }
     }
 }
 
