--- a/homogeniuses/static/css/style.scss
+++ b/homogeniuses/static/css/style.scss
@@ -3,8 +3,6 @@
 }
 
 html {
-    font-size: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 a {
@@ -12,6 +10,8 @@ a {
 }
 
 body {
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: salmon;
     line-height: 22px;
     display: flex;
@@ -79,23 +79,21 @@ main {
     div.votes {
         position: relative;
         display: flex;
-        border: 1px solid black;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
         padding: 10px;
         margin: 10px 0 10px 0;
-
-        .or {
-            font-size: 3rem;
-            font-weight: 900;
-        }
 
         button {
             width: 25%;
             min-height: 80px;
             max-height: 100px;
             border-radius: 6px;
-            font-size: 2rem;
+            font-size: 28px;
+        }
+
+        .already-voted {
+            text-align: center;
         }
 
         .vote-over {
@@ -157,9 +155,46 @@ main {
     }
 
     .score {
+        margin-bottom: 16px;
+        padding-inline: 10px;
+
+        .sentiment {
+            text-align: center;
+            margin: 8px;
+        }
+
         .score-bar {
             display: flex;
             outline: 1px solid black;
+            position: relative;
+            height: 50px;
+            
+            .guide {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                display: grid;
+                grid-template-columns: 40% 20% 40%;
+                
+                >div {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    color: grey;
+                    font-style: italic;
+                    text-align: center;
+                }
+
+                .tied-section {
+                    border-right: 1px dotted white;
+                    border-left: 1px dotted white;
+                } 
+            }
+
+            .bar {
+                overflow: hidden;
+                white-space: nowrap;
+            }
 
             .homo-bar {
                 background-color: pink;
