--- a/homogeniuses/templates/videos/video_page.html
+++ b/homogeniuses/templates/videos/video_page.html
@@ -7,26 +7,35 @@
 <nav class="video-nav" aria-label="Video navigation">
     <ul>
         <li><a href="{{ url_for('videos.random_video') }}">Random video</a></li>
-        <li><a href="{{ url_for('videos.random_video', steam_id=user.steam_id) }}">Next random video without my vote</a></li>
+        <li><a href="{{ url_for('videos.random_video', steam_id=user.steam_id) }}">Random video (without my vote)</a></li>
     </ul>
 </nav>
 <div class="votes" aria-label="Vote options">
     {% set disabled = "disabled" if not user.is_authenticated else "" %}
     <div class="vote-over login-nag {{disabled}}"><a href="{{ url_for('auth.login') }}">Jack in to cast judgements!</a></div>
     <button type="button" class="hvote" {{disabled}}>homo <span class="hcount">{{ video.homo_votes }}</span></button>
+    
+    <div class="already-voted">
+        {% if users_prev_vote != None %}
+        <p>You previously voted: {{ "homo" if users_prev_vote == 0 else "genius" }}.</p>
+        {% else %}
+        <p>No vote logged.</p>
+        {% endif %}
+    </div>
+    
     <button type="button" class="gvote" {{disabled}}>genius <span class="gcount">{{ video.genius_votes }}</span></button>
 </div>
-{% if users_prev_vote != None %}
-<div class="already-voted">You previously voted: {{ "homo" if users_prev_vote == 0 else "genius" }}.</div>
-{% else %}
-<div class="already-voted">You have not voted.</div>
-{% endif %}
 <div class="score" aria-label="Video score">
+    <p class="sentiment">{{ sentiment }}</p>
     <div class="score-bar">
-        <div class="homo-bar bar" data-votes="{{ video.homo_votes }}">homo: {{ video.homo_votes }}</div>
-        <div class="genius-bar bar" data-votes="{{ video.genius_votes }}">genius: {{ video.genius_votes }}</div>
+        <div class="guide">
+            <div class="homo-section">GENIUS</div>
+            <div class="tied-section">HOMO-GENIUS</div>
+            <div class="genius-section">HOMO</div>
+        </div>
+        <div class="homo-bar bar" data-votes="{{ video.homo_votes }}"></div>
+        <div class="genius-bar bar" data-votes="{{ video.genius_votes }}"></div>
     </div>
-    <p>{{ sentiment }}</p>
 </div>
 {% endblock %}
 
